Allow tag overriding for release

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,4 +50,5 @@ jobs:
           tag: OpenWrt-Fritzbox
           files: ipks/
           gzip: false
+          allow_override: true
           token: ${{ secrets.GITHUB_TOKEN }}
