--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,23 +31,17 @@ jobs:
           name: OpenWrt-packages
           path: bin/packages/mips_24kc/
 
-      - name: Copy all ipk packages to one directory
+      - name: Create a repository structure and package it
         run: |
-          mkdir -vp ipks
-          cp -v bin/targets/lantiq/xrx200/packages/*.ipk ipks/
-          cp -v bin/packages/mips_24kc/*/*.ipk ipks/
+          mkdir -vp repo/{,image,ipk/{,base,luci,packages,routing,telephony}}
+          cp -vR bin/targets/lantiq/xrx200/* repo/image
+          cp -vR bin/packages/mips_24kc/* repo/ipk
+          tar -czf repo/openwrt-fritzbox-repo.tar.gz repo/*
           
-      - name: Fix sha256sum line in index creating script and create the ipk package repo files
-        run: |
-          sed -ie 's/mkhash sha256 $pkg/sha256sum $pkg | awk "{ print $1 }"/' scripts/ipkg-make-index.sh
-          ./scripts/ipkg-make-index.sh ipks > ipks/Packages.manifest
-          grep -vE '^(Maintainer|LicenseFiles|Source|Require)' ipks/Packages.manifest > ipks/Packages
-          gzip -9nc ipks/Packages > ipks/Packages.gz
-
-      - name: Release all built packages
+      - name: Release the repo tarball
         uses: softprops/action-gh-release@v1
         with:
           tag_name: OpenWrt-Fritzbox
-          files: ipks/*
+          files: repo/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
